# amplifier-module-provider-vllm

./: README.md  pyproject.toml
ai_working/: CODE_REVIEW_2025-11-28.md  ISSUES_DETAILED.md  REFACTORING_PLAN.md
amplifier_module_provider_vllm/: __init__.py  _constants.py  _response_handling.py  _token_accounting.py
tests/: test_behavioral.py  test_cost_tier.py  test_error_body_json.py  test_error_translation.py  test_reasoning_effort.py  test_retry.py  test_retry_config_alignment.py  test_shared_retry.py  test_tool_repair.py  test_usage_fields.py  test_validation.py
