[project]
name = "amplifier-module-provider-vllm"
version = "1.0.0"
description = "vLLM provider module - OpenAI-compatible API integration for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "openai>=1.0.0",
]

[project.entry-points."amplifier.modules"]
provider-vllm = "amplifier_module_provider_vllm:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_vllm",
]

[tool.hatch.metadata]
allow-direct-references = true
